manifests-original/nodejs/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: eingaruca/nodejs:TAGVARIABLE
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          failureThreshold: 15
          httpGet:
            path: /api/users
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 15
          httpGet:
            path: /api/users
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nodejs-app-svc
# spec:
#   selector:
#     app: nodejs-app
#   ports:
#   - protocol: TCP
#     port: 8081
#     targetPort: 8000
#   type: NodePort
